--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
@@ -50,6 +50,10 @@
         *ngIf="isAdmin"
         >ADMIN PORTAL</a
       >
+      <!-- <a class="userName" style="margin-left: 1100px; color: orange"
+      *ngIf="userLogInCheck()"
+      >{{loggedInUser.firstName}}</a -->
+    <!-- > -->
     </div>
   </div>
 </nav>
