--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.css
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.css
@@ -17,11 +17,10 @@
 
 .navbar {
   font-family: Arial, Helvetica, sans-serif !important;
-   margin: 0px !important;
-   font-size: 17px !important;
-   /* font-stretch: 3px !important; */
-   border-radius: 0 !important;
-
+  margin: 0px !important;
+  font-size: 17px !important;
+  /* font-stretch: 3px !important; */
+  border-radius: 0 !important;
 }
 
 .nb-txt {
@@ -30,4 +29,9 @@
 
 .glyphicon-cog {
   color: orange;
+}
+
+.userName {
+  font-size: 25px !important;
+
 }
