--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -32,7 +32,7 @@
                 <label class="sliderLabel" placeholder="Distance">{{ searchDistance }} miles</label>
                 <!-- <input class="slider" style="margin-left: 200px; margin-top: 75px" [(ngModel)]="searchDistance" placeholder="Distance"
                 min={{min}} max={{max}} name="searchDistance" (change)="searchByDistance(); selected=null" type="range"> -->
-                <input type="range" min="0" max="500" step="5" name="searchDistance" [(ngModel)]="searchDistance"
+                <input type="range" min="0" max="200" step="5" name="searchDistance" [(ngModel)]="searchDistance"
                   (change)="searchByDistance(); selected = null" class="slider" id="myRange" />
               </div>
             </div>
@@ -153,7 +153,7 @@
 
 
         <div class="userDisplayName" *ngIf="!selected && hideSearchResult">
-        <div class="alert alert-dark" role="alert">
+        <div [routerLink]="['/users']" class="alert alert-dark" role="alert">
           {{loggedInUser.firstName}} {{loggedInUser.lastName}}
         </div>
         </div>
