--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav id="nav" class="navbar navbar-expand-sm navbar-dark bg-secondary sticky">
-  <a class="navbar-brand nb-txt" href="#"><span class="glyphicon glyphicon-cog"></span>Gear<span style="color: orange">Silo</span></a>
+  <a class="gearSilo"><img class="gearImage" src="https://i.imgur.com/R6Losmb.png" >Gear<span style="color: orange">Silo</span></a>
   <button
     class="navbar-toggler navbar-toggler-right sticky"
     type="button"
@@ -50,10 +50,6 @@
         *ngIf="isAdmin"
         >ADMIN PORTAL</a
       >
-      <!-- <a class="userName" style="margin-left: 1100px; color: orange"
-      *ngIf="userLogInCheck()"
-      >{{loggedInUser.firstName}}</a -->
-    <!-- > -->
     </div>
   </div>
 </nav>
