--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -510,8 +510,10 @@
                           {{res.completed}}</button>
                       </td>
                       <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#MessageModal"
-                          (click)="reservationMessages()">Message</button>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal"
+                        data-target="#MessageModal" (click)="onClickMessage(res)">
+                        Message
+                      </button>
                       </td>
                     </tr>
                   </tbody>
@@ -526,30 +528,38 @@
       </div>
 
       <!-- Messaging Modal -->
-      <div class="modal fade" id="MessageModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="MessageModal">Message Length: -** {{resMessages.length}} **-</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <table>
-                <tr *ngFor="let msg of resMessages; let i = index">
-                  <td> {{msg.message | titlecase}}</td>
-                </tr>
-              </table>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+     <form #userMsg="ngForm" ngNativeValidate id="registerForm" class="text-left">
+        <div class="modal fade" id="MessageModal" tabindex="-1" role="dialog"
+          aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Messages</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <table>
+                  <tr *ngFor="let msg of resMessages; let i = index">
+                    <td> {{msg.message | titlecase}}</td>
+                  </tr>
+                </table>
+                <div class="form-group">
+                  <label for="message">Message:
+                    <textarea cols="40" rows="5" class="form-control" id="message" name="message"
+                      placeholder="message" ngModel required></textarea></label>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-save" (click)="createMessage(userMsg)"
+                  data-dismiss="modal">Save changes</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </form>
 
 
       <!-- MY GEAR I AM RENTING RESERVTION MODAL -->
@@ -620,7 +630,10 @@
                         Review
                       </button></td>
                     <td>
-                      <button class="btn btn-primary">Messages</button>
+                      <button type="button" class="btn btn-secondary" data-toggle="modal"
+                        data-target="#MessageModal" (click)="onClickMessage(res)">
+                        Message
+                      </button>
                     </td>
                   </tr>
                 </tbody>
