fixed gear silo logo hover color change

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -64,7 +64,16 @@
 .pic {
   height: 50px;
   width: 50px;
-  border-radius: 45%;
+  border-radius: 50%;
+}
+
+.pic:hover {
+  transform: scale(2);
+  transition: .1s ease-in-out;
+  transform-style: preserve-3d;
+  border-style: solid;
+  border-width: 1px;
+  border-color: orange;
 }
 
 .checked {
@@ -390,7 +399,6 @@ input[type="range"] + .thumb.active {
   background-color: white;
   color: orange;
   border-color: grey;
-  transform: rotate3d();
 }
 
 
