--- a/ngGearSilo/src/app/components/footer/footer.component.html
+++ b/ngGearSilo/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="small text-center text-white-50">
   <div class="container">
-    <a href="#/about">Copyright &copy; Almond Teira 2019 </a>
+    <a href="#/about">Copyright &copy; {{company | titlecase }}, {{currentYear | date:'yyyy' }}</a>
   </div>
 </footer>
