added scrollbar to messages

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -529,7 +529,7 @@
 
       <!-- Messaging Modal -->
      <form #userMsg="ngForm" ngNativeValidate id="registerForm" class="text-left">
-        <div class="modal fade" id="MessageModal" tabindex="-1" role="dialog"
+        <div class="modal fade" id="MessageModal" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px;" tabindex="-1" role="dialog"
           aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
