link changed to linkedIn for Mr. Rogers

--- a/ngGearSilo/src/app/components/about/about.component.html
+++ b/ngGearSilo/src/app/components/about/about.component.html
@@ -14,8 +14,7 @@
       <a href="https://github.com/AdamOnwan" target="_blank" class="btn btn-outline-light js-scroll-trigger">Adam
         Onwan</a>
       <br><br>
-      <a href="https://github.com/jerryrogersjr" target="_blank" class="btn btn-outline-light js-scroll-trigger">Jerry
-        Rogers, Jr.</a>
+      <a href="https://www.linkedin.com/in/jerryrogersjr/" target="_blank" class="btn btn-outline-light js-scroll-trigger">Mr Rogers</a>
       <br><br>
       <a href="https://github.com/Briman-Jag" target="_blank" class="btn btn-outline-light js-scroll-trigger">Brian
         Streetman</a>
