--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -541,8 +541,8 @@
               </div>
               <div class="modal-body">
                 <table>
-                  <tr *ngFor="let msg of resMessages; let i = index">
-                    <td> {{msg.reservation.userShopper.firstName}}{{msg.message | titlecase}}</td>
+                  <tr *ngFor="let msg of resMessages | resMsg: loggedInUser: msgRcver">
+                    <td> {{msg.reservation.userShopper.firstName}} {{msg.message | titlecase}}</td>
                   </tr>
                 </table>
                 <div class="form-group">
