Added set Categories to update gear on GearServiceImpl. Added category select to updateGear on profile.html but commented it out for now

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -369,6 +369,28 @@
                     class="form-control" [(ngModel)]="updatedGear.description">
                 </div>
 
+                <!-- Categories -->
+                <!-- <div class="form-group mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" style="width: 117px"
+                      id="inputGroup-sizing-default">Category</span>
+                  </div>
+                  <select class="form-control" [(ngModel)]="updatedGear.categories" placeholder="{{selecteditem.categories}" multiple>
+                    <option [ngValue]='null' disable>(Choose a Category - ctrl+select for multiple)</option>
+                    <option value='Skating'>Skating</option>
+                    <option value='Surf'>Surf</option>
+                    <option value='Hiking'>Hiking</option>
+                    <option value='Biking'>Biking</option>
+                    <option value='Water Sports'>Water Sports</option>
+                    <option value='Rock Climbing'>Rock Climbing</option>
+                    <option value='Skiing'>Skiing</option>
+                    <option value='Snowboarding'>Snowboarding</option>
+                    <option value='Freefalling'>Freefalling</option>
+                    <option value='Snow'>Snow</option>
+                    <option value='Sports'>Sports</option>
+                  </select>
+                </div> -->
+
                 <!-- CONDITION -->
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
