made it where you can't see the alert toast of the user name when a user is not logged in. gearlist

--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -152,7 +152,7 @@
         </div>
 
 
-        <div class="userDisplayName" *ngIf="!selected && hideSearchResult">
+        <div class="userDisplayName" *ngIf="!selected && hideSearchResult && loggedInUser.firstName !== undefined">
         <div [routerLink]="['/users']" class="alert alert-dark" role="alert">
           {{loggedInUser.firstName| titlecase}} {{loggedInUser.lastName | titlecase}}
         </div>
