--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -58,13 +58,15 @@
           </div>
         </div>
 
-
         <!-- MY RESERVATIONS BUTTON -->
+        <hr>
         <button data-toggle="modal" data-target="#myGearReservations" class="btn btn-defult"><i aria-hidden="true"></i>
           Gear I am lending </button>
         <button data-toggle="modal" data-target="#userResModal" class="btn btn-defult"><i aria-hidden="true"></i>
           Gear I am renting</button>
-
+        <hr>
+        <button *ngIf="isAdmin" routerLink="/admin" class="btn btn-defult"><i aria-hidden="true"></i>
+          Admin Portal</button>
 
       </div>
       <div class="col-md-9 col-sm-9 col-xs-12 pull-right profile-right-section">
