--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -400,7 +400,11 @@
         <div (click)="selectedGearReview = null">Gear Reviews</div>
       </ng-template>
       <ng-template ngbTabContent>
-        <div id="gearReviewList" class="container-fluid" *ngIf="!selectedGearReview">
+        <div
+          id="gearReviewList"
+          class="container-fluid"
+          *ngIf="!selectedGearReview"
+        >
           <table class="table table-striped table-hover">
             <thead class="thead-light">
               <tr>
@@ -484,3 +488,4 @@
     </ngb-tab>
   </ngb-tabset>
 </div>
+
