changed message buttons

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -527,7 +527,7 @@
                           {{res.completed?'Yes':'No'}}</button>
                       </td>
                       <td>
-                        <button type="button" class="btn btn-secondary" data-toggle="modal"
+                        <button type="button" class="btn btn-primary" data-toggle="modal"
                         data-target="#MessageModal" (click)="onClickMessage(res)">
                         Message
                       </button>
@@ -536,7 +536,7 @@
                   </tbody>
                 </table>
                 <div style="float: left" class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
@@ -569,7 +569,7 @@
                 </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-save" (click)="createMessage(userMsg)"
                   data-dismiss="modal">Save changes</button>
               </div>
@@ -601,7 +601,7 @@
                 </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-save" (click)="createMessage(userMsg)"
                   data-dismiss="modal">Save changes</button>
               </div>
@@ -679,7 +679,7 @@
                         Review
                       </button></td>
                     <td>
-                      <button type="button" class="btn btn-secondary" data-toggle="modal"
+                      <button type="button" class="btn btn-primary" data-toggle="modal"
                         data-target="#MessageModal2" (click)="onClickMessage(res)">
                         Message
                       </button>
@@ -688,7 +688,7 @@
                 </tbody>
               </table>
               <div style="float: left" class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
