--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -558,9 +558,10 @@
               </div>
               <div class="modal-body">
                 <table>
-                  <tr *ngFor="let msg of resMessages | resMsg: loggedInUser: msgRcver">
-                    <td> {{msg.reservation.gearId.user.firstName}} {{msg.reservation.gearId.user.lastName}}: {{msg.message | titlecase}}</td>
+                  <tr class="" *ngFor="let msg of resMessages | resMsg: loggedInUser: msgRcver">
+                    <td> {{msg.message}}</td>
                   </tr>
+
                 </table>
                 <div class="form-group">
                   <label for="message">Message:
@@ -577,8 +578,8 @@
           </div>
         </div>
       </form>
-     <form #userMsg="ngForm" ngNativeValidate id="registerForm" class="text-left">
-        <div class="modal fade" id="MessageModal2" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px;" tabindex="-1" role="dialog"
+     <form #userMsg2="ngForm" ngNativeValidate id="registerForm" class="text-left">
+        <div class="modal fade rentingModal" id="MessageModal2" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px;" tabindex="-1" role="dialog"
           aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -591,7 +592,7 @@
               <div class="modal-body">
                 <table>
                   <tr *ngFor="let msg of resMessages | resMsg: loggedInUser: msgRcver">
-                    <td> {{msg.reservation.gearId.user.firstName}} {{msg.reservation.gearId.user.lastName}}: {{msg.message | titlecase}}</td>
+                    <td> {{msg.message}}</td>
                   </tr>
                 </table>
                 <div class="form-group">
@@ -602,7 +603,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-save" (click)="createMessage(userMsg)"
+                <button type="button" class="btn btn-save" (click)="createMessage(userMsg2)"
                   data-dismiss="modal">Save changes</button>
               </div>
             </div>
@@ -675,15 +676,15 @@
                       </div>
                     </td>
                     <td> <button type="button" class="btn btn-secondary" data-toggle="modal"
-                        data-target="#reviewLenderModal" (click)="onClickReviewGear(res)">
-                        Review
-                      </button></td>
-                    <td>
-                      <button type="button" class="btn btn-primary" data-toggle="modal"
-                        data-target="#MessageModal2" (click)="onClickMessage(res)">
-                        Message
-                      </button>
-                    </td>
+                      data-target="#reviewLenderModal" (click)="onClickReviewGear(res)">
+                      Review
+                    </button></td>
+                            <td>
+                              <button type="button" class="btn btn-primary" data-toggle="modal"
+                                data-target="#MessageModal2" (click)="onClickMessage(res)">
+                                Message
+                              </button>
+                            </td>
                   </tr>
                 </tbody>
               </table>
