--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -19,14 +19,10 @@
     <div class="card-body">
       <h1 class="card-title">User Status</h1>
       <h4>
-        <span class="badge badge-secondary border shadow"
-          >Total Users: {{ countUsers() }}</span
-        >
+        <span class="badge badge-secondary border shadow">Total Users: {{ countUsers() }}</span>
       </h4>
       <h4>
-        <span class="badge badge-success border shadow"
-          >Active Users: {{ countActiveU() }}</span
-        >
+        <span class="badge badge-success border shadow">Active Users: {{ countActiveU() }}</span>
       </h4>
     </div>
     <div class="card-footer">
@@ -38,19 +34,13 @@
     <div class="card-body">
       <h1 class="card-title">Gear Status</h1>
       <h4>
-        <span class="badge badge-secondary border shadow"
-          >Total Gear: {{ countGear() }}</span
-        >
+        <span class="badge badge-secondary border shadow">Total Gear: {{ countGear() }}</span>
       </h4>
       <h4>
-        <span class="badge badge-success border shadow"
-          >Active Gear: {{ countActiveG() }}</span
-        >
+        <span class="badge badge-success border shadow">Active Gear: {{ countActiveG() }}</span>
       </h4>
       <h4>
-        <span class="badge badge-success border shadow"
-          >Available Gear: {{ countAvailableG() }}</span
-        >
+        <span class="badge badge-success border shadow">Available Gear: {{ countAvailableG() }}</span>
       </h4>
     </div>
     <div class="card-footer">
@@ -62,24 +52,16 @@
     <div class="card-body">
       <h1 class="card-title">Reservation Status</h1>
       <h4>
-        <span class="badge badge-secondary border shadow"
-          >Total Reservations: {{ countResv() }}</span
-        >
+        <span class="badge badge-secondary border shadow">Total Reservations: {{ countResv() }}</span>
       </h4>
       <h4>
-        <span class="badge badge-warning border shadow"
-          >Needs Approval: {{ countNeedsApproval() }}</span
-        >
+        <span class="badge badge-warning border shadow">Needs Approval: {{ countNeedsApproval() }}</span>
       </h4>
       <h4>
-        <span class="badge badge-success border shadow"
-          >Completed Reservations: {{ countCompletedR() }}</span
-        >
+        <span class="badge badge-success border shadow">Completed Reservations: {{ countCompletedR() }}</span>
       </h4>
       <h4>
-        <span class="badge badge-success border shadow"
-          >Active Reservations: {{ countActiveR() }}</span
-        >
+        <span class="badge badge-success border shadow">Active Reservations: {{ countActiveR() }}</span>
       </h4>
     </div>
     <div class="card-footer">
@@ -110,11 +92,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr
-                class="showHand"
-                *ngFor="let user of users"
-                (click)="selectedUser = user"
-              >
+              <tr class="showHand" *ngFor="let user of users" (click)="selectedUser = user">
                 <td>{{ user.id }}</td>
                 <td>{{ user.lastName }}</td>
                 <td>{{ user.firstName }}</td>
@@ -134,21 +112,14 @@
             {{ selectedUser.firstName | uppercase }}
             {{ selectedUser.lastName | uppercase }}
           </h1>
-          <img
-            class="img-fluid img-thumbnail"
-            src="{{ selectedUser.imageUrl }}"
-            alt="Profile Photo"
-            width="200"
-            height="200"
-          />
+          <img class="img-fluid img-thumbnail" src="{{ selectedUser.imageUrl }}" alt="Profile Photo" width="200"
+            height="200" />
           <br />
           <ul class="list-group">
             <li class="list-group-item">User Id: {{ selectedUser.id }}</li>
             <li class="list-group-item">
               Email:
-              <a href="mailto:{{ selectedUser.email }}"
-                ><u>{{ selectedUser.email }}</u></a
-              >
+              <a href="mailto:{{ selectedUser.email }}"><u>{{ selectedUser.email }}</u></a>
             </li>
             <li class="list-group-item">
               Username: {{ selectedUser.username }}
@@ -184,24 +155,15 @@
 
           <br />
           <div class="btn-group" role="group" aria-label="selected task">
-            <button
-              class="btn btn-outline-success"
-              (click)="selectedUser = null"
-            >
+            <button class="btn btn-outline-success" (click)="selectedUser = null">
               Back
             </button>
-            <button
-              class="btn btn-outline-warning"
-              *ngIf="!selectedUser.enabled"
-              (click)="updatedUserEnabled(selectedUser)"
-            >
+            <button class="btn btn-outline-warning" *ngIf="!selectedUser.enabled"
+              (click)="updatedUserEnabled(selectedUser)">
               Enable
             </button>
-            <button
-              class="btn btn-outline-danger"
-              *ngIf="selectedUser.enabled"
-              (click)="updatedUserEnabled(selectedUser)"
-            >
+            <button class="btn btn-outline-danger" *ngIf="selectedUser.enabled"
+              (click)="updatedUserEnabled(selectedUser)">
               Disable
             </button>
           </div>
@@ -229,11 +191,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr
-                *ngFor="let gear of gearList"
-                class="showHand"
-                (click)="selectedGear = gear"
-              >
+              <tr *ngFor="let gear of gearList" class="showHand" (click)="selectedGear = gear">
                 <td>{{ gear.id }}</td>
                 <td>{{ gear.name }}</td>
                 <td>{{ gear.user.id }}</td>
@@ -272,33 +230,18 @@
             </li>
             <li class="list-group-item">Price: $ {{ selectedGear.price }}</li>
             <li class="list-group-item">
-              IMG-1:<img
-                class="img-thumbnail"
-                src="{{ selectedGear.imageUrl }}"
-                alt=""
-              />
+              IMG-1:<img class="img-thumbnail" src="{{ selectedGear.imageUrl }}" alt="" />
             </li>
             <li class="list-group-item">
-              IMG-2:<img
-                class="img-thumbnail"
-                src="{{ selectedGear.imageUrl2 }}"
-                alt=""
-              />
+              IMG-2:<img class="img-thumbnail" src="{{ selectedGear.imageUrl2 }}" alt="" />
             </li>
             <li class="list-group-item">
-              IMG-3:<img
-                class="img-thumbnail"
-                src="{{ selectedGear.imageUrl3 }}"
-                alt=""
-              />
+              IMG-3:<img class="img-thumbnail" src="{{ selectedGear.imageUrl3 }}" alt="" />
             </li>
           </ul>
           <br />
           <div class="btn-group" role="group" aria-label="selected task">
-            <button
-              class="btn btn-outline-success"
-              (click)="selectedGear = null"
-            >
+            <button class="btn btn-outline-success" (click)="selectedGear = null">
               Back
             </button>
           </div>
@@ -326,11 +269,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr
-                *ngFor="let reservation of resvList"
-                class="showHand"
-                (click)="selectedResv = reservation"
-              >
+              <tr *ngFor="let reservation of resvList" class="showHand" (click)="selectedResv = reservation">
                 <td>{{ reservation.id }}</td>
                 <td>{{ reservation.gearId.user.id }}</td>
                 <td>{{ reservation.userShopper.id }}</td>
@@ -382,10 +321,7 @@
           </ul>
           <br />
           <div class="btn-group" role="group" aria-label="selected task">
-            <button
-              class="btn btn-outline-success"
-              (click)="selectedResv = null"
-            >
+            <button class="btn btn-outline-success" (click)="selectedResv = null">
               Back
             </button>
           </div>
@@ -400,11 +336,7 @@
         <div (click)="selectedGearReview = null">Gear Reviews</div>
       </ng-template>
       <ng-template ngbTabContent>
-        <div
-          id="gearReviewList"
-          class="container-fluid"
-          *ngIf="!selectedGearReview"
-        >
+        <div id="gearReviewList" class="container-fluid" *ngIf="!selectedGearReview">
           <table class="table table-striped table-hover">
             <thead class="thead-light">
               <tr>
@@ -414,11 +346,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr
-                *ngFor="let review of gearReviewList"
-                class="showHand"
-                (click)="selectedGearReview = review"
-              >
+              <tr *ngFor="let review of gearReviewList" class="showHand" (click)="selectedGearReview = review">
                 <td>{{ review.id }}</td>
                 <td>{{ review.rating }}</td>
                 <td>{{ review.active }}</td>
@@ -462,24 +390,15 @@
           </ul>
           <br />
           <div class="btn-group" role="group" aria-label="selected task">
-            <button
-              class="btn btn-outline-success"
-              (click)="selectedGearReview = null"
-            >
+            <button class="btn btn-outline-success" (click)="selectedGearReview = null">
               Back
             </button>
-            <button
-              class="btn btn-outline-warning"
-              *ngIf="!selectedGearReview.active"
-              (click)="updatedGearReviewEnabled(selectedGearReview)"
-            >
+            <button class="btn btn-outline-warning" *ngIf="!selectedGearReview.active"
+              (click)="updatedGearReviewEnabled()">
               Enable
             </button>
-            <button
-              class="btn btn-outline-danger"
-              *ngIf="selectedGearReview.active"
-              (click)="updatedGearReviewEnabled(selectedGearReview)"
-            >
+            <button class="btn btn-outline-danger" *ngIf="selectedGearReview.active"
+              (click)="updatedGearReviewEnabled()">
               Disable
             </button>
           </div>
@@ -488,4 +407,3 @@
     </ngb-tab>
   </ngb-tabset>
 </div>
-
