--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -752,7 +752,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">Review the Lender</h5>
+              <h5 class="modal-title" id="exampleModalLongTitle">Review</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -782,7 +782,7 @@
               </div>
 
               <div class="form-group">
-                <label for="rating">{{selectedRes.gearId.user.firstName | titlecase}}'s Rating
+                <label for="rating">Lender Rating
                   <input type="number" class="form-control" id="lenderRating" name="lenderRating" ngModel required
                     min="1" max="5"></label>
               </div>
